# ai-spec-evolution

./: .gitignore  README.md  config.example.yaml  pyproject.toml
.github/workflows/: spec-evolution.yml
src/: cli.py  config.py  db.py
src/collector/: account_manager.py  discovery.py  twitter.py  weibo.py
src/generator/: issue.py
src/llm/: dashscope.py
src/models/: practice.py
src/processor/: dedup.py  filter.py
src/verifier/: fork_runner.py  logic_validator.py
tests/: test_collector.py  test_dashscope.py  test_db.py  test_dedup.py  test_discovery.py
